--- a/history.tex
+++ b/history.tex
@@ -22,18 +22,16 @@ Hot metal typesetting was an expensive, complicated, and time-consuming process,
 so publishers had replaced it with phototypesetting,
 which works by projecting images of characters onto film.
 The new technology, while much cheaper and faster,
-didn't provide the same level of quality Knuth
+didn't provide the quality Knuth
 expected.\punckern\endnote{Knuth, \textit{Digital Typography} (Stanford, 1999), 3--5}
 
 The average author would have resigned themselves to this change and moved on,
-but Knuth took great pride in print quality,
-especially for the mathematics in his books.
-Around the same time, he discovered an exciting new technology:
-digital typesetting.
-Instead of working with metal or film,
-glyphs were built from tiny dots,
+but Knuth took great pride in his books' appearances,
+especially their mathematics.
+Around this time, he also discovered the growing field of digital typesetting,
+where glyphs are built from tiny dots,
 packed together at over 1,000 per inch.
-Inspired by this burgeoning tech and frustrated with the current state of affairs,
+Inspired,
 Knuth set off on one of the greatest yak shaves\footnote{Programmers
 call seemingly unrelated work needed to solve their main problem
 ``yak shaving''\quotekern. The phrase is thought to originate from an episode
@@ -118,7 +116,7 @@ The most recent version, 3.14159265, came out in January~2014.
     and Luigi Scarso.\punckern\endnote{\http{www.luatex.org}}
 \end{description}
 
-Building \TeX{} today is an\ldots{} interesting endeavor.
+Building \TeX{} today is an\dots{} interesting endeavor.
 When it was written in the late 1970s,
 there were no large, well-documented open-source projects for students to study,
 so Knuth set out to make \TeX{} into one.
