--- a/installation.tex
+++ b/installation.tex
@@ -1,14 +1,14 @@
 \chapter{Installation}
 \label{installation}
 
-You install \LaTeX{} on your computer by downloading a \introduce{distribution},
-which comes with:
+You install \LaTeX{} on your computer by downloading a \introduce{distribution}.
+It comes with:
 \begin{enumerate}
 \item \LaTeX, the program---the thing that turns text files into typeset
-    documents.\footnote{We'll actually be installing multiple \LaTeX{} programs,
+    documents.\footnote{We'll actually install multiple \LaTeX{} programs,
     but we're getting to that.}
 \item A common set of \LaTeX{} \introduce{packages}.
-    Packages are pieces of code that can be placed in your documents to
+    Packages are pieces of code that you place in your documents to
     do all sorts of things, like change their style or add new commands.
     We'll see lots of them in action throughout this book.
 \item Miscellaneous tools, such as editors.
@@ -49,7 +49,7 @@ Sublime, Notepad\plusplus, and so on.\punckern\footnote{If you have never used
 any of these, try a few.
 They're popular among programmers and other folks who shuffle text around
 screens all day. Just don't use Notepad. Life is too short.}
-However, there are also editors designed specifically for \LaTeX{},
+There are also editors designed specifically for \LaTeX{},
 which often come with their own built-in \acronym{pdf} viewer.
 You can find a fairly comprehensive list on the \LaTeX{} Wikibook,
 in its installation chapter. (See Appendix~\ref{resources}.)
@@ -61,4 +61,4 @@ you can try online editors such as Share\LaTeX{} and Overleaf.
 This book won't focus on these web-based tools,
 but almost all of the same basics apply.
 (Of course, you have less control over certain aspects of online versions,
-such as available fonts, the version of \LaTeX{} that's used, and so on.)
+like available fonts, the version of \LaTeX{} that's used, and so on.)
