--- a/international.tex
+++ b/international.tex
@@ -2,7 +2,7 @@
 \label{i18n}
 
 Surprisingly, many languages besides English exist.
-You may want to write with them.
+You may want to use them.
 
 \section{Unicode}
 
@@ -13,8 +13,7 @@ computers usually represent text with Unicode. Briefly,
 \item A Unicode text file is made from a series of \introduce{code points},
     each of which can represent a character to be drawn,
     an accent or other diacritical mark to combine with an adjacent
-    character,\punckern\footnote{As a silly example, the skin tones
-    for emoji are specified as combining code points.}
+    character,
     or some non-printing character,
     such as an instruction to print subsequent text right-to-left.
 \item One or more of these code points combines to represent a
@@ -38,7 +37,7 @@ files.\punckern\footnote{\LuaLaTeX{} accepts \mbox{\acronym{utf}-8} files,
 while \XeLaTeX{} is a bit more flexible and also
 accepts \mbox{\acronym{utf}-16} and
 \mbox{\acronym{utf}-32}.}
-Make sure that the fonts you select contain the needed glyphs---many
+Make sure that the fonts you select contain the glyphs you need---many
 only contain ones for Latin languages.
 
 \section{The polyglossia package}
