--- a/math.tex
+++ b/math.tex
@@ -9,7 +9,7 @@ and the latter with \verb|\[...\]|.
 Inside these math environments, the rules of \LaTeX{} change:
 \begin{itemize}
 \item Most spaces and line breaks are ignored,
-    and the engine makes spacing decisions for you based on
+    and spacing decisions are made for you based on
     typographical conventions for mathematics.
     \verb|$x+y+z$| and \verb|$x + y + z$| both give you $x+y+z$.
 \item Empty lines are not allowed---each formula occupies a single
@@ -21,11 +21,11 @@ Other formatting commands mentioned in \chapref{formatting} work as well.
 From
 \begin{leftfigure}
 \begin{lstlisting}
-\[\text{fake formulas} = \textbf{annoyed mathematicians}\]
+\[ \text{fake formulas} = \textbf{annoyed mathematicians} \]
 \end{lstlisting}
 \end{leftfigure}
 we get
-\[\text{\lm fake formulas} = \textbf{\lm annoyed mathematicians}\]
+\[ \text{\lm fake formulas} = \textbf{\lm annoyed mathematicians} \]
 
 \section{Examples}
 
