--- a/micro.tex
+++ b/micro.tex
@@ -5,7 +5,7 @@
 a document's legibility.
 In other words, it is
 \begin{quote}
-[\ldots]the art of enhancing the appearance and readability of a
+[\dots]the art of enhancing the appearance and readability of a
 document while exhibiting a minimum degree of visual obtrusion.
 It is concerned with what happens between or at the margins of characters,
 words or lines. Whereas the macro-typographical aspects of a document
@@ -48,7 +48,7 @@ to appear the same height.\punckern\endnote{%
 Jost Hochuli, \textit{Detail in typography}
 (Éditions~\textsc{b}42, 2015),
 18--19}}
-\texttt{microtype} compensates by \introduce{protruding} these glyphs
+\texttt{microtype} compensates by \introduce{protruding} these smaller glyphs
 into the margins.
 
 \section{Font expansion}
