--- a/pagelayout.tex
+++ b/pagelayout.tex
@@ -13,7 +13,7 @@ which permits line breaks in many more places,\punckern\endnote{%
 Franklin Mark Liang,
 \textit{Word Hy-phen-a-tion by Com-put-er} (Stanford, 1983),
 \http{www.tug.org/docs/liang/}}
-this produces some of the best paragraph layouts available.
+this produces better paragraph layouts than almost any other software.
 
 But sometimes we don't want our text justified.
 If you would like it to be flush left,
@@ -157,7 +157,7 @@ We often split layouts into several columns, especially when printing on
 \textsc{a4} or \acronym{us}~\textsc{l}etter paper,
 since it allows more comfortable line widths at standard
 8--12\,pt text sizes.\punckern\footnote{You'll see different advice depending
-on where you look, but a general rule of thumb is to design layouts to have
+on where you look, but a rule of thumb is to design layouts to have
 fewer than 90 characters (including spaces) per line.
 Shorter lines keep readers from needing to scan very far to find the start of
 the next line.
@@ -207,13 +207,13 @@ body text, then sets its argument as a footnote at the bottom of the current
 page:
 \begin{leftfigure}
 \begin{lstlisting}
-I love footnotes!\footnote{Perhaps a bit too much\ldots}
+I love footnotes!\footnote{Perhaps a bit too much\dots}
 \end{lstlisting}
 \end{leftfigure}
 proclaims
 \begin{leftfigure}
 \lm%
-I love footnotes!\footnote{Perhaps a bit too much\ldots}
+I love footnotes!\footnote{Perhaps a bit too much\dots}
 \end{leftfigure}
 
 \section{What next?}
