--- a/punctuation.tex
+++ b/punctuation.tex
@@ -73,7 +73,7 @@ serve different purposes:
 \item[Em dashes] can be used to separate clauses of a sentence.
     Other punctuation---like parenthesis or commas---play a similar
     role.
-    They are set with three adjacent hyphens (\,\texttt{---}\,).
+    They are set with three hyphens (\,\texttt{---}\,).
 
 \item[Minus signs] are used exclusively for negative quantities and
     mathematical expressions.
