--- a/textformatting.tex
+++ b/textformatting.tex
@@ -74,7 +74,7 @@ It is usually ten points,\punckern\footnote{The standard digital publishing
 point, sometimes called the PostScript point, is \otffrac{1}{72} of an inch.
 \LaTeX{}, for historical reasons, defines its point (\texttt{pt})
 as \otffrac{100}{7227} of an inch
-and the former as a ``big point''\quotekern, or \texttt{bp}.}
+and the former as a ``big points''\quotekern, or \texttt{bp}.}
 but this can be adjusted by passing additional arguments to
 \verb|\documentclass|.\punckern\footnote{The standard \LaTeX{} classes accept
 \texttt{10pt}, \texttt{11pt}, or \texttt{12pt}.
@@ -120,7 +120,7 @@ But points and optical sizes don't tell the whole story.
 Each typeface has its own proportions, which make a huge difference
 in perceived size.
 (Compare Garamond, {\fontspec{Latin Modern Roman} Latin Modern},
-and {\fontspec{NHaasGroteskTXPro-55RG}Helvetica}, all at 11\,pt.)
+and {\fontspec{NHaasGroteskDSPro-55Rg}Helvetica}, all at 11\,pt.)
 Shown below are some common terms:
 \begin{centerfigure}
 \includegraphics[keepaspectratio,width=0.7\textwidth]{heights.png}
