--- a/why.tex
+++ b/why.tex
@@ -67,7 +67,7 @@ These other applications operate on the principle of
 where what's on screen is the same as what comes out of your printer.
 \LaTeX{} is different. Here, documents are written as ``plain''
 text files, using \introduce{markup} to specify how they should look.
-\LaTeX{} then builds your documents from these source files,
+\LaTeX{} then composes your work from these source files,
 based on the formatting rules you give it.
 If you've done any web development, this is a similar process---just
 as \acronym{html} and \acronym{css} describe the page you want
@@ -84,7 +84,7 @@ These other applications operate on the principle of
 where what's on screen is the same as what comes out of your printer.
 \LaTeX{} is different. Here, documents are written as ``plain''
 text files, using \introduce{markup} to specify how they should look.
-\LaTeX{} then builds your documents from these source files,
+\LaTeX{} then composes your work from these source files,
 based on the formatting rules you give it.
 If you've done any web development, this is a similar process---just
 as \acronym{html} and \acronym{css} describe the page you want
@@ -98,21 +98,20 @@ document to \LaTeX.
 This might seem alien to you if you've never worked with a markup system before.
 However, it comes with a few advantages:
 \begin{enumerate}
-\item You can handle a document's contents and its presentation separately.
-    At the beginning of each document,
+\item You can handle your work's content and its presentation separately.
+    At the start of each document,
     you describe the design you want.
-    \LaTeX{} takes it from there,
-    keeping fonts, sizes, layout,
-    and other formatting considerations consistent across your
+    \LaTeX{} takes it from there, maintaining consistent
+    fonts, sizes, page layouts, and other formatting concerns across your
     whole text.
     Compare this to a \acronym{wysiwyg} system,
-    where you must constantly concern yourself with your work's appearance
+    where you constantly deal with appearances
     as you write.
     If you changed the look of a caption,
     did you make sure to find all the other captions and do the
     same?
     If the program formats something in a way you don't like,
-    how hard is it to fix?%\footnote{I spent far too much of my childhood
+    is it hard to fix?%\footnote{I spent far too much of my childhood
     %fighting with Word about how it wrapped text around images.}
 \clearpage
 
