Push margins around
Top margin is now 0.75in

--- a/hello.tex
+++ b/hello.tex
@@ -80,18 +80,18 @@ times you hit the space bar.\punckern\footnote{Or the tab key}
 For example,
 \begin{leftfigure}
 \begin{lstlisting}
-The number  of   spaces    between words doesn't   matter. The same
-is true for sentences.
+The number  of   spaces    between words doesn't   matter. The
+same is true for sentences.
 
-An empty line ends the previous paragraph and starts a new one.
+An empty line ends the previous paragraph and starts the next.
 \end{lstlisting}
 \end{leftfigure}
 yields
 \begin{leftfigure}
-\lm The number  of   spaces    between words doesn't   matter. The same
-is true for sentences.
+\lm The number  of   spaces    between words doesn't   matter. The
+same is true for sentences.
 
-An empty line ends the previous paragraph and starts a new one.
+An empty line ends the previous paragraph and starts the next.
 \end{leftfigure}
 Notice that \LaTeX{} automatically follows typographic
 conventions, such as indenting new paragraphs and leaving more space after a
@@ -106,7 +106,7 @@ This% weird, right?
 \end{leftfigure}
 gives
 \begin{leftfigure}
-This% weird, right?
+\lm This% weird, right?
   is strange
 \end{leftfigure}
 
@@ -239,7 +239,8 @@ Donald Knuth once wrote,
 We should forget about small efficiencies,
 say about 97\% of the time:
 premature optimization is the root of all evil.
-Yet we should not pass up our opportunities in that critical 3\%.
+Yet we should not pass up our opportunities in
+that critical 3\%.
 \end{quote}
 \end{lstlisting}
 \end{leftfigure}
@@ -251,7 +252,8 @@ Donald Knuth once wrote,
 We should forget about small efficiencies,
 say about 97\% of the time:
 premature optimization is the root of all evil.
-Yet we should not pass up our opportunities in that critical 3\%.
+Yet we should not pass up our opportunities in
+that critical 3\%.
 \end{quote}
 \end{leftfigure}
 
