--- a/history.tex
+++ b/history.tex
@@ -4,7 +4,7 @@
 
 Donald Knuth is celebrated among programmers as
 the man who coined the term \emph{analysis of algorithms} in 1968
-and pioneered many of the computer science fundamentals we use today.
+and pioneered many computer science fundamentals we use today.
 Knuth is perhaps most famous for his ongoing magnum opus,
 \textit{The Art of Computer Programming}.
 
@@ -18,7 +18,7 @@ which were finally inked and pressed against paper.
 
 By March of 1977, Knuth was ready for a second run of \acronym{taocp}, volume~2,
 but he was horrified when he received the proofs.
-Hot metal typesetting was an expensive, complicated, and time-consuming process,
+Hot metal typesetting was expensive, complicated, and time-consuming,
 so publishers had replaced it with phototypesetting,
 which works by projecting images of characters onto film.
 The new technology, while much cheaper and faster,
@@ -54,7 +54,7 @@ of Word can be their own desktop publisher.
 Adobe's \acronym{pdf} wouldn't exist for another decade, so Knuth
 and his graduate students devised their own device-independent format,
 \acronym{dvi}.
-Scalable fonts were uncommon, so he created \MF{} to rasterize his glyphs
+Scalable fonts were uncommon, so he created \MF{} to rasterize glyphs
 into dots on the page.
 Perhaps most importantly, Knuth and his students designed algorithms
 to automatically hyphenate and justify text into
@@ -89,8 +89,7 @@ The most recent version, 3.14159265, came out in January~2014.
 
 \item[pdf\TeX] is an extension of \TeX{} that provides direct \acronym{pdf}
     output (instead of \TeX's \acronym{dvi}),
-    native support for PostScript\footnote{%
-    \addfontfeature{Numbers=Uppercase}Specifically, PostScript Type 1}
+    native support for PostScript
     and TrueType fonts,
     and micro-typographic features discussed in \chapref{microtype}.
     It was originally developed by
