--- a/pagelayout.tex
+++ b/pagelayout.tex
@@ -119,8 +119,8 @@ then indents lines that follow:
 \begin{description}
 \item[Alan Turing] was a British mathematician who laid much
     of the groundwork for the field of computer science.
-    He is perhaps most remembered for his model of computation,
-    the Turing machine.
+    He is perhaps most remembered for his model of
+    computation, the Turing machine.
 \item[Edsger Dijkstra] was a Dutch computer scientist.
     His contributions in many subdomains---such as concurrency
     and graph theory---are still in wide use today.
