--- a/why.tex
+++ b/why.tex
@@ -60,40 +60,45 @@ software are only just starting to catch up.} advances in computer typography,
 offering you the same tools used by professional designers and publishers.
 
 \section{\texorpdfstring{\LaTeX}{LaTeX}?}
+
 \LaTeX{} is an alternative to ``word processors'' like
-Microsoft Word, Apple Pages, Google Docs, and LibreOffice Writer.
+Microsoft Word, Apple Pages, Google Docs,
+and LibreOffice Writer.
 These other applications operate on the principle of
 \introduce{What You See Is What You Get} \acronym{(wysiwyg)},
-where what's on screen is the same as what comes out of your printer.
-\LaTeX{} is different. Here, documents are written as ``plain''
-text files, using \introduce{markup} to specify how they should look.
+where what's on screen is the same as what comes out of your
+printer.
+\LaTeX{} is different. Here, documents are written as
+``plain'' text files, using \introduce{markup} to specify
+how they should look.
 \LaTeX{} then composes your work from these source files,
 based on the formatting rules you give it.
-If you've done any web development, this is a similar process---just
-as \acronym{html} and \acronym{css} describe the page you want
-browsers to draw, your markup describes the appearance of your
-document to \LaTeX.
+If you've done any web development, this is a similar
+process---just as \acronym{html} and \acronym{css} describe
+the page you want browsers to draw, your markup describes the
+appearance of your document to \LaTeX.
 
-\vfill
 \begin{leftfigure}
 \begin{lstlisting}
 \LaTeX{} is an alternative to ``word processors'' like
-Microsoft Word, Apple Pages, Google Docs, and LibreOffice Writer.
+Microsoft Word, Apple Pages, Google Docs,
+and LibreOffice Writer.
 These other applications operate on the principle of
 \introduce{What You See Is What You Get} \acronym{(wysiwyg)},
-where what's on screen is the same as what comes out of your printer.
-\LaTeX{} is different. Here, documents are written as ``plain''
-text files, using \introduce{markup} to specify how they should look.
+where what's on screen is the same as what comes out of your
+printer.
+\LaTeX{} is different. Here, documents are written as
+``plain'' text files, using \introduce{markup} to specify
+how they should look.
 \LaTeX{} then composes your work from these source files,
 based on the formatting rules you give it.
-If you've done any web development, this is a similar process---just
-as \acronym{html} and \acronym{css} describe the page you want
-browsers to draw, your markup describes the appearance of your
-document to \LaTeX.
+If you've done any web development, this is a similar
+process---just as \acronym{html} and \acronym{css} describe
+the page you want browsers to draw, your markup describes the
+appearance of your document to \LaTeX.
 \end{lstlisting}
 \captionof{figure}{The \LaTeX{} markup for the above paragraph}
 \end{leftfigure}
-\vfill
 
 This might seem alien to you if you've never worked with a markup system before.
 However, it comes with a few advantages:
@@ -113,7 +118,6 @@ However, it comes with a few advantages:
     If the program formats something in a way you don't like,
     is it hard to fix?%\footnote{I spent far too much of my childhood
     %fighting with Word about how it wrapped text around images.}
-\clearpage
 
 \item You can define your own rules, then tweak them to instantly adjust
     everywhere they're used.
@@ -173,7 +177,6 @@ or try (in vain) to be a comprehensive reference.
 After all, you're a smart, resourceful individual who knows how to use a search
 engine.
 This book will:
-\clearpage
 
 \begin{enumerate}
 \item Teach you the fundamentals of \LaTeX.
